--- a/src/Components/Login/login.css
+++ b/src/Components/Login/login.css
@@ -1,13 +1,41 @@
-
 .signup-container {
+    
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 85vh;
+    height: 86vh;
     flex-direction: column;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+
+.signup-container-signup::before
+{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("./chad-montano-MqT0asuoIcU-unsplash.jpg") no-repeat center center;
+    background-size: cover;
+    opacity: 1; 
+    z-index: -1;
+}
+
+.signup-container-signin::before
+{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("./davide-cantelli-jpkfc5_d-DI-unsplash.jpg") no-repeat center center;
+    background-size: cover;
+    opacity: 1; 
+    z-index: -1;
+}
 .signup {
     background-color: #f9f9f9;
     padding: 20px;
@@ -83,4 +111,22 @@
     background-color: #fcf8e3;
     color: #8a6d3b;
     border: 1px solid #faebcc;
+}
+
+.msgs
+{
+    padding: 10px 5px;
+    width: 100%;
+    border-radius: 5px;
+    /* color: whitesmoke; */
+}
+
+.red
+{
+    background-color: rgb(227, 126, 126);
+
+}
+
+.green{
+    background-color:#86f189;
 }
