--- a/src/Components/Products/products.css
+++ b/src/Components/Products/products.css
@@ -16,7 +16,6 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 5rem;
-  /* margin-top: 50px; */
   margin: 50px auto;
 }
 
@@ -28,6 +27,7 @@
   border-radius: 5px;
   display: flex;
   flex-direction: column;
+  height: 105%;
 }
 
 .cards .image {
@@ -46,12 +46,29 @@
 .contents {
   display: flex;
   flex-direction: column;
-  padding: 20px 20px;
+  padding: 10px 10px;
+  /* background-color: yellow; */
 }
 
-.contents .name {
+.information
+{
+  height: 100%;
+  bottom: 0;
+}
+
+.nameitem
+{
+  display: flex;
+  flex-direction: column;
+  padding: 10px 20px;
+  /* background-color: red; */
+  height: 15vh;
+}
+
+.name {
   text-align: left;
   margin-bottom: 10px;
+  font-size: 15px;
 }
 
 .quantity {
@@ -89,6 +106,8 @@
   /* justify-content: center; */
   align-items: center;
   justify-content: space-between;
+  /* height: 100%; */
+  /* margin-top: auto; */
 }
 
 .btn-cart {
@@ -98,6 +117,7 @@
   border: none;
   outline: none;
   border-radius: 5px;
+  margin-top: 10px;
 }
 
 .btn-cart:hover
@@ -117,6 +137,8 @@
   outline: none;
   padding: 5px;
   border-radius: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .dropdown option
