--- a/src/Components/Slider/slider.css
+++ b/src/Components/Slider/slider.css
@@ -8,6 +8,7 @@
   position: relative;
   height: 80vh;
   margin: auto;
+  overflow: hidden;
 }
 
 .image-container {
@@ -16,6 +17,7 @@
   /* text-align: center; */
   justify-content: center;
   display: flex;
+  overflow: hidden;
 }
 
 img {
@@ -23,6 +25,7 @@ img {
   height: 100%;
   object-fit: cover; 
   display: block;
+  transition: 1s ease-in; 
 }
 
 .prev-button,
@@ -57,20 +60,35 @@ img {
   position: absolute;
   bottom: 70px;
   width: 80%;
-  /* text-align: center; */
-  /* align-items: center; */
   justify-content: center;
   display: flex;
+  align-items: center;
+  flex-direction: row;
 }
+
+.inputtext
+{
+  width: 100%;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+
 
 .search-container i
 {
     margin-left: 10px;
     font-size: 20px;
-    padding: 10px 12px;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     background-color: #d14534;
     color: white;
-    border-radius: 5px;    
+    border-radius: 5px; 
+    align-items: center;
+    display: flex;   
+    /* height: 100%; */
 }
 
 .search-container i:hover
