--- a/src/Components/Cart/cart.css
+++ b/src/Components/Cart/cart.css
@@ -34,6 +34,29 @@ html{
 .price .continue-shopping {
     display: flex;
     width: 100%;
+    justify-content: space-between;
+}
+
+.clearcart
+{
+    padding: 12px 20px;
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 15px;
+    outline: none;
+    border: none;
+    margin-left: 20px;
+    /* height: 30px; */
+}
+
+
+.btnclearcart button:hover
+{
+    background-color: #ea9487;
 }
 
 .price .continue-shopping a {
@@ -83,17 +106,21 @@ html{
     font-size: 20px;
 }
 
-.checkOut a {
-    padding: 10px 20px;
+.checkOut button {
+    padding: 12px 20px;
     background-color: #00bc8c;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     text-decoration: none;
+    font-size: 15px;
+    outline: none;
+    border: none;
+    margin-left: 20px;
 }
 
-.checkOut a:hover {
+.checkOut button:hover {
     background-color: #00e2a8;;
     color: white;
 }
