--- a/src/Components/Login/login.css
+++ b/src/Components/Login/login.css
@@ -139,11 +139,12 @@
     }
 }
 
-@media(max-width:330px)
+@media(max-width:390px)
 {
     .signup
     {
-        width: 250px;
+        width: 300px;
+        /* height: 40%; */
     }
     .signupForm input::placeholder
     {
@@ -153,6 +154,9 @@
     .signupForm .form button
     {
         font-size: 15px;
+        display: flex;
+        text-align: center;
+        justify-content: center;
     }
 
     .signup p
