--- a/Admin/AdminPanel/src/components/Contact/contact.css
+++ b/Admin/AdminPanel/src/components/Contact/contact.css
@@ -3,7 +3,6 @@
     background-color: black;
     color: white;
     display: flex;
-    /* align-items: center; */
     justify-content: center;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     height: 100vh;
@@ -57,8 +56,6 @@ table {
 .body-content tbody th, td {
     padding: 15px;
     text-align: center;
-    /* background-color: red; */
-    /* border-bottom: 1px solid #ddd; */
 }
 
 .btn-remove
@@ -134,5 +131,26 @@ th {
 {
     /* background-color:#ff6148; */
     width: 25%;
+}
+
+.view-items-container
+{
+    height: 70vh;
+    /* width: 60vw; */
+}
+
+.mainpage-body-content
+{
+    height: 52vh;
+    overflow-y: scroll;
+}
+
+.mainpage-cart-items
+{
+    width: 90%;
+    margin: 10px auto;
+    margin-top: 30px;
+    border: 1.5px solid #dddddd;
+    border-radius: 10px;
 }
 
